# ARWithWord

./: .gitattributes  .gitignore  README.md
ARWithWord/: packages.config
ARWithWord/Assets/Prefabs/: ARPlane.prefab  ARPointCloud.prefab  Text.prefab
ARWithWord/Assets/Resources/: passphrase.json
ARWithWord/Assets/Scenes/: Main.unity
ARWithWord/Assets/Scripts/: Constants.cs  GraphicsWorker.cs  ObjectDetector.cs  SimilarWordClient.cs  SpawnManager.cs  TextController.cs  TinyYolo3Detector.cs
ARWithWord/Assets/XR/: XRGeneralSettings.asset
ARWithWord/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ARWithWord/Temp/: workerlic
ARWithWord/Temp/StagingArea/: UnityManifest.xml
ARWithWord/Temp/__Backupscenes/: 0.backup
ARWithWord/UserSettings/: AndroidLogcatSettings.asset
Assets/: AR Default Plane.prefab  Cube.prefab  Main.unity  SpawnManager.cs  Text.prefab
Assets/Prefabs/: ARPlane.prefab  Text.prefab
Assets/Scenes/: Main.unity
Assets/Scripts/: Constants.cs  ObjectDetector.cs  SpawnManager.cs  TextureTools.cs  TinyYolo3Detector.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
UserSettings/: AndroidLogcatSettings.asset
backend/: Dockerfile  makefile  pyproject.toml  requirements.txt  run.sh
backend/k8s/: client.yaml  deployment.yaml  deployment_en.yaml  deployment_ja.yaml  disk.yaml  namespace.yaml  network.yaml  passphrase.sh
backend/src/: constants.py  main.py
backend/src/api/: health.py  root_health.py  similar_word.py
backend/src/data/: schema.py
backend/src/similar_word/: similar_word.py
(+137 files in other folders)
