[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gensim = "^4.0.1"
pydantic = "^1.8.1"
fastapi = "^0.63.0"
numpy = "^1.20.2"
uvicorn = "^0.13.4"
uvloop = "^0.15.2"
gunicorn = "^20.1.0"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
